[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/dialogue_tree/scripts/RandomDialogue.gd" type="Script" id=1]

[node name="RandomDialogue" type="GraphNode"]
margin_right = 154.0
margin_bottom = 80.0
title = "Random"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="ReferenceNameEdit" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 138.0
margin_bottom = 48.0
placeholder_text = "ReferenceName"

[node name="EditBox" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 48.0
margin_right = 138.0
margin_bottom = 68.0
alignment = 2

[node name="MinusButton" type="Button" parent="EditBox"]
margin_left = 78.0
margin_right = 98.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "-"

[node name="PlusButton" type="Button" parent="EditBox"]
margin_left = 102.0
margin_right = 122.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "+"

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 16.0
margin_top = 69.0
margin_right = 138.0
margin_bottom = 73.0
[connection signal="pressed" from="EditBox/MinusButton" to="." method="_on_MinusButton_pressed"]
[connection signal="pressed" from="EditBox/PlusButton" to="." method="_on_PlusButton_pressed"]
